k8s/preprod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lcm-app-preprod-deployment
  namespace: lcm-preprod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lcm-app-preprod
  template:
    metadata:
      labels:
        app: lcm-app-preprod
    spec:
      containers:
      - name: lcm-app
        image: ghcr.io/a-mover/amoverdesktopfinal:latest
        ports:
        - containerPort: 80
