k8s/preprod/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lcm-app-preprod-service
  namespace: lcm-preprod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lcm-app-preprod
