k8s/preprod/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lcm-app-preprod-ingress
  namespace: lcm-preprod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: lcm-preprod.amover
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lcm-app-preprod-service
            port:
              number: 80
